Creating Habit Fact admin panel

--- a/core/src/main/resources/templates/core/footer.html
+++ b/core/src/main/resources/templates/core/footer.html
@@ -25,7 +25,7 @@
                             <a href="/management/habits/" class="router-links">Habits</a>
                         </li>
                         <li>
-                            <a href="/management/facts/" class="router-links">Habit Facts</a>
+                            <a href="/management/facts" class="router-links">Habit Facts</a>
                         </li>
                         <li>
                             <a href="/management/rating/" class="router-links">
