--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -38,7 +38,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="/management/facts/">
+                                <a href="/management/facts">
                                     Habit Facts
                                 </a>
                             </li>
