--- a/core/src/main/resources/templates/core/footer.html
+++ b/core/src/main/resources/templates/core/footer.html
@@ -35,6 +35,9 @@
                         <li>
                             <a href="/management/socialnetworkimages" class="router-links">Social network images</a>
                         </li>
+                        <li>
+                            <a href="/management/goals">Goals</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="bottom-part">
