--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -52,6 +52,11 @@
                                     Social network images
                                 </a>
                             </li>
+                            <li>
+                                <a href="/management/goals/">
+                                    Goals
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
