--- a/core/src/main/resources/templates/core/management_advices.html
+++ b/core/src/main/resources/templates/core/management_advices.html
@@ -38,7 +38,7 @@
                                 <span class="search-box-right">
                                     <form action="/management/advices" class="form-inline searching" method="get">
                                         <i class="material-icons"></i>
-                                        <input class="form-control" name="query" placeholder="Search…" type="text">
+                                        <input class="form-control" name="filter" placeholder="Search…" type="text">
                                     </form>
                                 </span>
                             <a class="btn btn-success" data-toggle="modal" href="#addAdviceModal"
