--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -1,7 +1,10 @@
 body {
     color: #566787;
     font-family: 'Open Sans', sans-serif;
-    font-size: 13px;
+    font-size: 14px;
+}
+.table{
+    font-size: 14px;
 }
 .table-responsive {
     margin: 30px 0;
@@ -33,7 +36,7 @@ body {
 .table-title .btn {
     color: #fff;
     float: right;
-    font-size: 13px;
+    font-size: 14px;
     border: none;
     min-width: 50px;
     border-radius: 2px;
@@ -68,7 +71,7 @@ table.table-striped.table-hover tbody tr:hover {
     background: #f5f5f5;
 }
 table.table th i {
-    font-size: 13px;
+    font-size: 14px;
     margin: 0 5px;
     cursor: pointer;
 }
@@ -116,7 +119,7 @@ table.table .avatar {
 }
 .pagination li a {
     border: none;
-    font-size: 18px;
+    font-size: 14px;
     min-width: 30px;
     min-height: 30px;
     color: #999;
@@ -145,7 +148,7 @@ table.table .avatar {
 .hint-text {
     float: left;
     margin-top: 10px;
-    font-size: 13px;
+    font-size: 14px;
 }
 /* Custom checkbox */
 .custom-checkbox {
@@ -303,7 +306,6 @@ input[type=search] {
     width: 122px;
     height: 48px;
     border-radius: 5px;
-    font-size: 16px;
     font-weight: 600;
 }
 .btn div{
@@ -408,3 +410,4 @@ a#deactivateOneSubmit.btn.btn-danger{
     background-color: #13AA57 !important;
     color: #fff;
 }
+
