--- a/core/src/main/resources/templates/core/footer.html
+++ b/core/src/main/resources/templates/core/footer.html
@@ -42,7 +42,7 @@
                             <a class="router-links" href="/management/socialnetworkimages">Social network images</a>
                         </li>
                         <li>
-                            <a href="/management/goals">Goals</a>
+                            <a href="/management/goals/">Goals</a>
                         </li>
                     </ul>
                 </div>
