Some bugs fixed

--- a/core/src/main/resources/templates/core/management_tips_and_tricks.html
+++ b/core/src/main/resources/templates/core/management_tips_and_tricks.html
@@ -76,8 +76,8 @@
                             </td>
                             <td>
 
-                                <input type="search" th:name="title" placeholder="Search"
-                                       th:value="${fields eq null ? '' : fields.title }"/>
+                                <input type="search" th:name="titleTranslations" placeholder="Search"
+                                       th:value="${fields eq null ? '' : fields.titleTranslations }"/>
 
                             </td>
                             <td>
