--- a/core/src/main/resources/templates/core/management_habit_facts.html
+++ b/core/src/main/resources/templates/core/management_habit_facts.html
@@ -140,22 +140,22 @@
                             </tbody>
                         </th:block>
                 </table>
-                <div class="clearfix">
+                <div class="clearfix" th:if="${pageable.getPage().size() ne 0}">
                     <div class="hint-text">Showing <b
                             th:text="${pageable.getTotalElements()>20?20:pageable.getTotalElements()}">5</b> out of <b
                             th:text="${pageable.getTotalElements()}">25</b> entries
                     </div>
                     <ul class="pagination">
-                        <!--<li class="page-item" th:classappend="${pageable.getCurrentPage()==0?'disabled':''}"><a
+                        <li class="page-item" th:classappend="${pageable.g  etCurrentPage()==0?'disabled':''}"><a
                                 th:href="@{facts(page=${pageable.getCurrentPage()-1})}" class="page-link">Previous</a>
-                        </li>-->
+                        </li>
                         <li class="page-item" th:each="i : ${#numbers.sequence(0,pageable.getTotalPages()-1)}"
                             th:classappend="${pageable.getCurrentPage()==i?'active':''}"><a
                                 th:href="@{facts(page=${i})}" class="page-link" th:text="${i+1}">1</a></li>
-                        <!--<li class="page-item"
+                        <li class="page-item"
                             th:classappend="${pageable.getCurrentPage()==pageable.getTotalPages()-1?'disabled':''}"><a
                                 th:href="@{facts(page=${pageable.getCurrentPage()+1})}"
-                                class="page-link">Next</a></li>-->
+                                class="page-link">Next</a></li>
                     </ul>
                 </div>
             </div>
@@ -270,7 +270,7 @@
                         <p class="text-warning"><small>This action cannot be undone.</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
                         <a href="" id="deleteOneSubmit" class="btn btn-remove">
                             <div>Delete</div></a>
                     </div>
