--- a/core/src/main/resources/templates/core/management_habit_facts.html
+++ b/core/src/main/resources/templates/core/management_habit_facts.html
@@ -176,6 +176,7 @@
                                                th:value="${language.getCode()}" readonly required>
                                     </div>
                                 </div>
+                                <input type="hidden" class="form-control" th:id="id+${language.getCode()}" th:name="id+${language.getCode()}">
                                 <div class="col-9">
                                     <div class="form-group">
                                         <label>Content</label>
@@ -223,6 +224,7 @@
                                         <label>Language code</label>
                                         <input type="text" class="form-control" th:id="${language.getCode()}" th:name="${language.getCode()}" th:value="${language.getCode()}" readonly required>
                                     </div>
+                                    <input type="hidden" class="form-control" th:id="id+${language.getCode()}" th:name="id+${language.getCode()}">
                                 </div>
                                 <div class="col-9">
                                     <div class="form-group">
