--- a/core/src/main/resources/templates/core/management_user_habits.html
+++ b/core/src/main/resources/templates/core/management_user_habits.html
@@ -35,21 +35,26 @@
                 <div class="table-title">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h2 style="color: white">Manage <strong>Habits</strong> </h2>
+                            <h2 style="color: white">Manage Habits </h2>
                         </div>
                         <div class="col-sm-6">
                                 <span class="search-box-right">
                                     <form class="form-inline searching" action="/management/habits"
                                           method="get">
-                                        <i class="material-icons"></i>
-                                        <input type="text" name="query" class="form-control" placeholder="Search…">
+                                        <!--<i class="material-icons"></i>-->
+                                        <img alt="search" id="btnSearchImage"
+                                             src="/img/search.png">
+                                        <input type="text" name="query" id="inputSearch" class="form-control"
+                                               placeholder="Search…">
                                     </form>
                                 </span>
-                            <a href="#addHabitModal" id="addHabitModalBtn" class="btn btn-success"
-                               data-toggle="modal"><i class="material-icons">&#xE147;</i>
-                                <span>Add New Habit</span></a>
-                            <a href="#deleteAllSelectedModal" class="btn btn-danger" data-toggle="modal"><i
-                                    class="material-icons">&#xE15C;</i> <span>Delete</span></a>
+                            <a href="#addHabitModal" id="addHabitModalBtn" class="btn btn-secondary"
+                               data-toggle="modal">
+                                <!--<i class="material-icons">&#xE147;</i>-->
+                                <div>Add New Habit</div></a>
+                            <a href="#deleteAllSelectedModal" class="btn btn-remove disabled" id="btnDelete" data-toggle="modal">
+                                <!--<i class="material-icons">&#xE15C;</i>-->
+                                <div>Delete</div></a>
                         </div>
                     </div>
                 </div>
@@ -74,7 +79,8 @@
                             <td>
                                 <span class="custom-checkbox">
                                     <input type="checkbox" th:id="checkbox+${iterStatus.count}" id="checkbox1"
-                                           name="options[]" th:value="${habit.id}">
+                                           name="options[]" th:value="${habit.id}"
+                                           th:onclick="'updateCheckBoxCount('+${iterStatus.count}+')'">
                                         <label th:for="checkbox+${iterStatus.count}" for="checkbox1"></label>
                                 </span>
                             </td>
@@ -202,8 +208,8 @@
                         </th:block>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-success" value="Add" id="submitAddBtn">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
+                        <input type="submit" class="btn btn-success btn-primary" value="Add" id="submitAddBtn">
                     </div>
                 </form>
             </div>
@@ -280,8 +286,8 @@
                         </th:block>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-info" value="Save" id="submitEditBtn">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
+                        <input type="submit" class="btn btn-success btn-primary" value="Save" id="submitEditBtn">
                     </div>
                 </form>
             </div>
@@ -301,8 +307,9 @@
                         <p class="text-warning"><small>This action cannot be undone.</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <a href="" id="deleteOneSubmit" class="btn btn-danger">Delete</a>
+                        <input class="btn btn-default btn-tertiary" data-dismiss="modal" type="button" value="Cancel">
+                        <a class="btn btn-remove" href="" id="deleteOneSubmit">
+                            <div>Delete</div></a>
                     </div>
                 </form>
             </div>
@@ -322,8 +329,9 @@
                         <p class="text-warning"><small>This action cannot be undone.</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <a href="" id="deleteAllSubmit" class="btn btn-danger">Delete</a>
+                        <input class="btn btn-default btn-tertiary" data-dismiss="modal" type="button" value="Cancel">
+                        <a class="btn btn-danger" href="" id="deleteAllSubmit">
+                            <div>Delete</div></a>
                     </div>
                 </form>
             </div>
