Change Eco News admin panel

--- a/core/src/main/resources/static/management/css/table_Modal_Pagination.css
+++ b/core/src/main/resources/static/management/css/table_Modal_Pagination.css
@@ -420,3 +420,19 @@ button#searchBy{
 button#searchBy img{
     width: 22px;
 }
+
+.col.text {
+    width: 280px;
+    word-wrap: break-word;
+}
+.col.title {
+    width: 140px;
+    word-wrap: break-word;
+}
+.col.source {
+    width: 140px;
+    word-wrap: break-word;
+}
+.col.action {
+    width: 90px;
+}
