--- a/core/src/main/resources/templates/core/management_eco_news.html
+++ b/core/src/main/resources/templates/core/management_eco_news.html
@@ -21,6 +21,10 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+    <link rel="stylesheet"
+          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
     <link rel="stylesheet" th:href="@{/management/css/table_Modal_Pagination.css}">
     <script th:src="@{/management/econews/buttonsAJAX.js}"></script>
 </head>
@@ -34,20 +38,23 @@
                 <div class="table-title">
                     <div class="row">
                         <div class="col-sm-6">
-                            <h2>Manage <b>Eco News</b></h2>
+                            <h2>Manage Eco News</h2>
                         </div>
                             <div class="col-sm-6">
                                 <span class="search-box-right">
                                     <form class="form-inline searching" action="/management/eco-news" method="get">
-                                        <i class="material-icons"></i>
-                                        <input type="text" name="query" class="form-control" placeholder="Search…">
+                                        <img alt="search" id="btnSearchImage"
+                                             src="/img/search.png">
+                                        <input type="text" name="query" id="inputSearch" class="form-control"
+                                               placeholder="Search…">
                                     </form>
                                 </span>
-                                <a href="#addEcoNewsModal" id="addEcoNewsModalBtn" class="btn btn-success"
-                                   data-toggle="modal"><i class="material-icons">&#xE147;</i>
-                                    <span>Add New Eco News</span></a>
-                                <a href="#deleteAllSelectedModal" class="btn btn-danger" data-toggle="modal"><i
-                                        class="material-icons">&#xE15C;</i> <span>Delete</span></a>
+                                <a href="#addEcoNewsModal" id="addEcoNewsModalBtn" class="btn btn-secondary" data-toggle="modal">
+                                    <div>Add Eco News</div>
+                                </a>
+                                <a href="#deleteAllSelectedModal" id="btnDelete" class="btn btn-remove disabled" data-toggle="modal" >
+                                    <div>Delete</div>
+                                </a>
                             </div>
                     </div>
                 </div>
@@ -60,15 +67,16 @@
                                     <label for="selectAll"></label>
                                 </span>
                         </th>
-                        <th style="width: 3%">Id</th>
-                        <th style="width: 13%">Title</th>
-                        <th style="width: 8%">Author</th>
-                        <th style="width: 20%">Text</th>
-                        <th style="width: 13%">Creation Date</th>
-                        <th style="width: 10%">Image</th>
-                        <th style="width: 10%">Source</th>
-                        <th style="width: 8%">Tags</th>
-                        <th style="width: 7%">Actions</th>
+                        <th>Id</th>
+                        <th>Title</th>
+                        <th>Author</th>
+                        <th>Text</th>
+                        <th>Creation Date</th>
+                        <th>Image</th>
+                        <th>Source</th>
+                        <th>Tags</th>
+                        <th>Actions</th>
+
                     </tr>
                     </thead>
 
@@ -99,10 +107,9 @@
                                     <div class="input-group input-daterange">
                                         <input type="search" name="startDate" class="form-control"
                                                th:value="${fields eq null ? '' : fields.startDate }" style="height: 3ch"/>
-                                        <div class="input-group-addon">to</div>
+                                        <div>to</div>
                                         <input type="search" name="endDate" class="form-control"
                                                th:value="${fields eq null ? '' : fields.endDate }" style="height: 3ch"/>
-                                        <button type="submit" id="searchByDates"><i class="fa fa-search"></i></button>
                                     </div>
                                 </td>
                                 <td>
@@ -118,7 +125,7 @@
                                            th:value="${fields eq null ? '' : fields.tags }"/>
                                 </td>
                                 <td>
-
+                                    <button type="submit" id="searchBy"><img alt="search" src="/img/search.png"></button>
                                 </td>
 
                             </tr>
@@ -130,25 +137,33 @@
                             <td>
                                     <span class="custom-checkbox">
                                         <input type="checkbox" th:id="checkbox+${iterStatus.count}" id="checkbox1"
-                                               name="options[]" th:value="${allEcoNews.getId()}">
+                                               name="options[]" th:value="${allEcoNews.getId()}"
+                                        th:onclick="'updateCheckBoxCount('+${iterStatus.count}+')'">
                                         <label th:for="checkbox+${iterStatus.count}" for="checkbox1"></label>
                                     </span>
                             </td>
                             <td th:text="${allEcoNews.getId()}"></td>
-                            <td th:text="${allEcoNews.getTitle()}"></td>
+                            <td class="col title" th:text="${allEcoNews.getTitle()}" style="overflow: hidden;
+                                                                           text-overflow: ellipsis;
+                                                                           display: -webkit-box;
+                                                                           -webkit-line-clamp: 10; /* number of lines to show */
+                                                                           -webkit-box-orient: vertical;"></td>
                             <td th:text="${allEcoNews.getAuthor().getName()}"></td>
-                            <td th:text="${allEcoNews.getText()}" style="overflow: hidden;
+                            <td class="col text" th:text="${allEcoNews.getText()}" style="overflow: hidden;
                                                                            text-overflow: ellipsis;
                                                                            display: -webkit-box;
                                                                            -webkit-line-clamp: 10; /* number of lines to show */
                                                                            -webkit-box-orient: vertical;">
-
                             </td>
                             <td th:text="${#temporals.format(allEcoNews.getCreationDate(), 'dd/MM/yyyy HH:mm')}"></td>
                             <td>
-                                <img th:src="${allEcoNews.getImagePath()}" th:width="120" th:height="100">
+                                <img th:src="${allEcoNews.getImagePath()} == null ? @{/img/default-image-list-view.png} : ${allEcoNews.getImagePath()}" th:width="120" th:height="100">
                             </td>
-                            <td th:text="${allEcoNews.getSource()}"></td>
+                            <td class="col source" th:text="${allEcoNews.getSource()}" style="overflow: hidden;
+                                                                           text-overflow: ellipsis;
+                                                                           display: -webkit-box;
+                                                                           -webkit-line-clamp: 10; /* number of lines to show */
+                                                                           -webkit-box-orient: vertical;"></td>
                             <td>
                                 <th:block th:each="translation : ${pageable.getPage().get(iterStatus.index).getTags()}">
                                     <li th:type="1" th:text="${translation}"></li>
@@ -166,22 +181,41 @@
                         </th:block>
                     </tbody>
                 </table>
-                <div class="clearfix">
-                    <div class="hint-text">Showing <b
-                            th:text="${pageable.getTotalElements()>20?20:pageable.getTotalElements()}">5</b> out of <b
-                            th:text="${pageable.getTotalElements()}">25</b> entries
+                <div class="clearfix" th:if="${pageable.getPage().size() ne 0}">
+                    <div class="hint-text">
+                        Showing
+                        <b th:text="${pageable.getCurrentPage() eq 0 ? '1 -' : (pageable.isHasNext() ? pageable.getPage().size() * pageable.getCurrentPage() : pageable.getTotalElements() - pageable.getPage().size()) + 1 + ' - '}"></b>
+                        <b th:text="${pageable.getCurrentPage() eq 0 ? pageable.getPage().size() : (pageable.isHasNext() ? pageable.getPage().size() * (pageable.getCurrentPage() + 1) : pageable.getTotalElements())}">*</b>
+                        out of
+                        <b th:text="${pageable.getTotalElements()}"></b>
+                        entries
                     </div>
                     <ul class="pagination">
-                        <li class="page-item" th:classappend="${pageable.getCurrentPage()==0?'disabled':''}"><a
-                                th:href="@{eco-news(page=${pageable.getCurrentPage()-1})}" class="page-link">Previous</a>
-                        </li>
-                        <li class="page-item" th:each="i : ${#numbers.sequence(0,pageable.getTotalPages()-1)}"
-                            th:classappend="${pageable.getCurrentPage()==i?'active':''}"><a
-                                th:href="@{eco-news(page=${i})}" class="page-link" th:text="${i+1}">1</a></li>
+
                         <li class="page-item"
-                            th:classappend="${pageable.getCurrentPage()==pageable.getTotalPages()-1?'disabled':''}"><a
-                                th:href="@{eco-news(page=${pageable.getCurrentPage()+1})}"
-                                class="page-link">Next</a></li>
+                            th:classappend="${!pageable.isFirst()} ? '' : 'disabled'">
+                            <a class="page-link" rel="tooltip" th:if="${!pageable.isFirst()}"
+                               th:href="@{/management/eco-news?page={id}(id=${0})}"><i
+                                    class="arrow fas fa-chevron-left"></i></a>
+                            <a class="page-link" rel="tooltip" th:if="${pageable.isFirst()}"><i
+                                    class="arrow fas fa-chevron-left"></i></a>
+                        </li>
+
+                        <li class="page-item"
+                            th:if="${pageNumber > -1 && pageNumber < pageable.getTotalPages()}"
+                            th:classappend="${pageNumber == pageable.getNumber()} ? 'active' : ''"
+                            th:each="pageNumber : ${#numbers.sequence(pageable.getNumber()-3, pageable.getNumber()+3)}">
+                            <a class="page-link" th:href="@{/management/eco-news?page={id}(id=${pageNumber})}">[[${pageNumber}+1]]</a>
+                        </li>
+
+                        <li class="page-item"
+                            th:classappend="${!pageable.isLast()} ? '' : 'disabled'">
+                            <a class="page-link" rel="tooltip" th:if="${!pageable.isLast()}"
+                               th:href="@{/management/eco-news?page={id}(id=${pageable.getTotalPages()-1})}"><i
+                                    class="arrow fas fa-chevron-right"></i></a>
+                            <a class="page-link" rel="tooltip" th:if="${pageable.isLast()}"><i
+                                    class="arrow fas fa-chevron-right"></i></a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -225,8 +259,8 @@
 
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-success" value="Add" id="submitAddBtn">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
+                        <input type="submit" class="btn btn-success btn-primary" value="Add" id="submitAddBtn">
                     </div>
                 </form>
             </div>
@@ -277,8 +311,8 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <input type="submit" class="btn btn-info" value="Save" id="submitEditBtn">
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
+                        <input type="submit" class="btn btn-info btn-primary" value="Save" id="submitEditBtn">
                     </div>
                 </form>
             </div>
@@ -299,8 +333,9 @@
                         <p class="text-warning"><small>This action cannot be undone.</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <a href="" id="deleteOneSubmit" class="btn btn-danger">Delete</a>
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
+                        <a href="" id="deleteOneSubmit" class="btn btn-remove">
+                            <div>Delete</div></a>
                     </div>
                 </form>
             </div>
@@ -320,8 +355,9 @@
                         <p class="text-warning"><small>This action cannot be undone.</small></p>
                     </div>
                     <div class="modal-footer">
-                        <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-                        <a href="" id="deleteAllSubmit" class="btn btn-danger">Delete</a>
+                        <input type="button" class="btn btn-default btn-tertiary" data-dismiss="modal" value="Cancel">
+                        <a href="" id="deleteAllSubmit" class="btn btn-danger">
+                            <div>Delete</div></a>
                     </div>
                 </form>
             </div>
@@ -329,28 +365,5 @@
     </div>
 </div>
 <div id="footer" th:insert="core/footer"></div>
-<!-- Include Date Range Picker -->
-<script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
-<link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
-
-<script>
-    $('.input-daterange input').each(function () {
-        $(this).datepicker({
-            format: 'yyyy-mm-dd',
-            todayHighlight: true,
-            autoclose: true,
-            orientation: 'top'
-        });
-    });
-
-    function applyFilters() {
-        document.getElementById("searchForm").action = "/management/eco-news";
-        document.getElementById("searchForm").submit();
-    }
-
-</script>
-
 </body>
 </html>
