Achievement admin panel

--- a/core/src/main/resources/templates/core/footer.html
+++ b/core/src/main/resources/templates/core/footer.html
@@ -13,6 +13,9 @@
                             <a class="router-links" href="/management/advices">Advices</a>
                         </li>
                         <li>
+                            <a class="router-links" href="/management/achievement">Achievement</a>
+                        </li>
+                        <li>
                             <a class="router-links" href="/management/eco-news">Eco news</a>
                         </li>
                         <li>
