--- a/core/src/main/resources/templates/core/header.html
+++ b/core/src/main/resources/templates/core/header.html
@@ -18,6 +18,11 @@
                                 </a>
                             </li>
                             <li>
+                                <a href="/management/achievement">
+                                    Achievement
+                                </a>
+                            </li>
+                            <li>
                                 <a href="/management/eco-news">
                                     Eco news
                                 </a>
